# chum

./: .gitignore  AGENTS.template.md  Cargo.toml  LICENSE  README.md  SKILL.md  chum.config.yaml  repo.spec.md
.github/workflows/: ci.yml  release.yml
agents/: agents.spec.md
design/: chum-package.md  codex-app-server-chum.md  codex-auth-provider.md
npm/: npm.spec.md  package.json
npm/scripts/: install.js  resolve-binary.js
plan/codex-auth/: implementation-spec.md  phase-1-auth-resolver.md  phase-2-direct-api-provider.md  phase-3-codex-exec-provider.md  phase-4-swim-integration.md  phase-5-docs-validation.md  progress-checklist.md  validation-checklist.md
plan/init/: implementation-spec.md  phase-0-scaffold.md  phase-1-workflow-core.md  phase-2-archive.md  phase-3-swim-stubs.md  phase-4-ai-swim.md  phase-5-packaging.md  progress-checklist.md  validation-checklist.md
plan/skill/: implementation-spec.md  phase-0-skill-scaffold.md  phase-1-python-core.md  phase-2-agent-surfaces.md  phase-3-skill-workflow.md  phase-4-init-archive.md  phase-5-validation-install.md  phase-6-rust-cleanup.md  progress-checklist.md  validation-checklist.md
reference/: init.md
references/: command-reference.md  references.spec.md  spec-format.md  workflow.md
scripts/: chum.py.spec.md  scripts.spec.md
skills/chum/: SKILL.md
src/: cli.rs  cli.rs.spec.md  config.rs  config.rs.spec.md  discovery.rs  discovery.rs.spec.md  main.rs  main.rs.spec.md  output.rs.spec.md  spec.rs  spec.rs.spec.md  src.spec.md
src/commands/: check.rs  (+10 more)
tests/: cli.rs  test_chum_script.py  tests.spec.md
(+26 files in other folders)
