[package]
name = "chum"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/magicloops/chum"
description = "Filesystem-first documentation workflow CLI"

[[bin]]
name = "chum"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
hex = "0.4"
ignore = "0.4"
pathdiff = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
